--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
         <li><a href="https://zinc-climb-c0a.notion.site/Reglas-de-Preguntor-b31f21a596d549559b671b83966f3a9d?pvs=4">Reglas</a></li>
         <li><a href="https://zinc-climb-c0a.notion.site/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
         <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
-        <li><a href="https://github.com/preguntor/preguntor.github.io">Un Juego de Codigo Abierto</a></li>
-        <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Linkedin De Founder </a></li>
+        <nav>
+          <li><a href="https://lookerstudio.google.com/s/oHe1UWUIZjY">Datos de Preguntor</a></li>
+          <li><a href="https://github.com/preguntor/preguntor.github.io">Un Juego de Codigo Abierto</a></li>
+          <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Linkedin De Founder </a></li>
+          <div class="menu-icon">&#9776;</div>
+        </nav>
       </ul>
        <!--Etiqueta de menu y su caracter -->
       <div class="menu-icon">&#9776;</div>
