--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
    <!-- Descripcion del juego-->
-  <h4>Juego de Preguntas. Crea Conexiones con las Personas a traves de Conversaciones Interesantes</h4>
+  <h4>Juego de Preguntas. Crea Conexiones con las Personas a traves de Preguntas y genera Conversaciones Interesantes</h4>
   
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
