botones de publicar y feedbacj

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
     <button onclick="nextQuestion()">Siguiente Pregunta</button>
      <!--Boton para compartir pregunta -->
     <button id="shareSelectButton" onclick="compartirPregunta()">Compartir</button>
+
+    <!--Boton para Feedback -->
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_3MSQEnL9Nu_lY7TCc7isqfznTEx_XecnGJRph_j5aMmctA/viewform" target="_blank">
+      <button id="sugerencia_boton">Sugerencia</button>
+    </a>
+    <!--Boton para landing page -->
+    <a href="https://preguntor.github.io/precios/index" target="_blank">
+      <button id="publicar_pregunta_boton">Publicar Pregunta</button>
+    </a>
     
 </div>
 
