diseño de publicar

--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
       <button id="sugerencia_boton">Sugerencia</button>
     </a>
     <!--Boton para landing page -->
-    <a href="https://preguntor.github.io/precios/index" target="_blank">
+    <a href="https://preguntor.github.io/precios/index" target="_blank" class="publicar_pregunta_link">
       <button id="publicar_pregunta_boton">Publicar Pregunta</button>
     </a>
+    
     
 </div>
 
