diseño de botones

--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
 
     <!-- Botón para la siguiente pregunta (con llamada a función JavaScript) -->
     <button onclick="nextQuestion()">Siguiente Pregunta</button>
-     <!--Boton para compartir pregunta -->
-    <button id="shareSelectButton" onclick="compartirPregunta()">Compartir</button>
-
-    <!--Boton para Feedback -->
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_3MSQEnL9Nu_lY7TCc7isqfznTEx_XecnGJRph_j5aMmctA/viewform" target="_blank">
-      <button id="sugerencia_boton">Sugerencia</button>
-    </a>
     <!--Boton para landing page -->
     <a href="https://preguntor.github.io/precios/index" target="_blank" class="publicar_pregunta_link">
       <button id="publicar_pregunta_boton">Publicar Pregunta</button>
+    </a>
+
+    <!--Boton para compartir pregunta -->
+    <button id="shareSelectButton" onclick="compartirPregunta()">Compartir</button>
+    <!--Boton para Feedback -->
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_3MSQEnL9Nu_lY7TCc7isqfznTEx_XecnGJRph_j5aMmctA/viewform" target="_blank" class="sugerencia_boton">
+      <button id="sugerencia_boton">Sugerencia</button>
     </a>
     
     
