--- a/index.html
+++ b/index.html
@@ -108,8 +108,13 @@
       <button id="publicar_pregunta_boton">Publicar Pregunta</button>
     </a>
 
-    <!--Boton para compartir pregunta -->
-    <button id="shareSelectButton" onclick="compartirPregunta()">Compartir</button>
+    <div style="display: block;">
+      <!--Boton para Feedback -->
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_3MSQEnL9Nu_lY7TCc7isqfznTEx_XecnGJRph_j5aMmctA/viewform" target="_blank" class="sugerencia_boton">
+          <button id="sugerencia_boton">Sugerencia</button>
+      </a>
+  </div>
+  
     <!--Boton para Feedback -->
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_3MSQEnL9Nu_lY7TCc7isqfznTEx_XecnGJRph_j5aMmctA/viewform" target="_blank" class="sugerencia_boton">
       <button id="sugerencia_boton">Sugerencia</button>
