--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@
       <button id="publicar_pregunta_boton">Publicar Pregunta</button>
     </a>
 
+    <!--Botones secundarios-->
     <div style="display: block;">
       <!--Boton para compartir pregunta -->
       <button id="shareSelectButton" onclick="compartirPregunta()">Compartir</button>
+      <button id="shareSelectButton" class="icono-button"></button>
       <!--Boton para Feedback -->
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_3MSQEnL9Nu_lY7TCc7isqfznTEx_XecnGJRph_j5aMmctA/viewform" target="_blank" class="sugerencia_boton">
         <button id="sugerencia_boton">Sugerencia</button>
