--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
     <!--Botones secundarios-->
     <div style="display: block;">
       <!--Boton para compartir pregunta -->
-      <button id="shareSelectButton" class="icono-button" onclick="compartirPregunta()">Compartir</button>
-      <button id="shareSelectButton" class="icono-button"></button>
+      <button id="shareSelectButton" onclick="compartirPregunta()">Compartir</button>
       <!--Boton para Feedback -->
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_3MSQEnL9Nu_lY7TCc7isqfznTEx_XecnGJRph_j5aMmctA/viewform" target="_blank" class="sugerencia_boton">
         <button id="sugerencia_boton">Sugerencia</button>
