capture de pantalla

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
 
     <!--Botones secundarios-->
     <div style="display: block;">
+      <!--Capture de pantalla-->
+      <button id="screenshotButton">Tomar Captura de Pantalla</button>
+ 
       <!--Boton para compartir pregunta -->
       <button id="shareSelectButton" onclick="compartirPregunta()">Compartir</button>
       <!--Boton para Feedback -->
