--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 <!-- Enlace al archivo de funciones JavaScript -->
 <script src="preguntor_funciones.js"></script>
 
+<meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
 
 </body>
 </html>
