--- a/index.html
+++ b/index.html
@@ -110,9 +110,6 @@
 
     <!--Botones secundarios-->
     <div style="display: block;">
-      <!--Capture de pantalla-->
-      <button id="screenshotButton">Tomar Captura de Pantalla</button>
- 
       <!--Boton para compartir pregunta -->
       <button id="shareSelectButton" onclick="compartirPregunta()">Compartir</button>
       <!--Boton para Feedback -->
@@ -139,7 +136,7 @@
 <!-- Enlace al archivo de funciones JavaScript -->
 <script src="preguntor_funciones.js"></script>
 
-<meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
+<!--Permiso para capture-->
 
 </body>
 </html>
