--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
    <!-- Contenido de la pagina-->
   <!-- Encabezado del cuerpo de la página -->
-  <h1>Preguntor</h1>
+  <h1>Crea conexiones a través de preguntas</h1>
    <!-- Descripcion del juego-->
-  <h4>Juego de Preguntas. Crea Conexiones con las Personas a traves de Preguntas y genera Conversaciones Interesantes</h4>
+  <h4>1) Buscas a alguien → 2) Eliges el tema. → 3) Haces la pregunta. </h4>
   
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
