--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/png" href="precios/images/logotipo.png">
   <!-- Configurar carateres especiales del idioma español -->
   <meta charset="UTF-8">
+  <!--Descripcion de la pagina para buscadores-->
+  <meta name ="decription" content="Juego de Preguntas. Crea conexiones a traves preguntas interesantes."/>
   <!--Ancho de la pagina y sus ajustes -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Titulo-->
