--- a/pruebas.html
+++ b/pruebas.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <!-- Configuración básica del documento -->
@@ -13,9 +13,10 @@
   <!--Ancho de la pagina y sus ajustes -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Titulo-->
-  <title>Preubas_preguntor_</title>
+  <title>preguntor</title>
   <!-- Enlace a la hoja de estilos externa -->
   <link rel="stylesheet" type="text/css" href="preguntor_style.css">
+
 </head>
  <!--Etiqueta del cuerpo de la pagina, todo el contenido visible -->
 <body>
@@ -44,7 +45,7 @@
 
    <!-- Contenido de la pagina-->
   <!-- Encabezado del cuerpo de la página -->
-  <h1>⚠️PRUEBAS ⚠️Crea conexiones a través de preguntas</h1>
+  <h1>⚠️PRUEBAS⚠️ | Crea conexiones a través de preguntas</h1>
    <!-- Descripcion del juego-->
   <h4>1) Buscas a alguien → 2) Eliges el tema. → 3) Haces la pregunta. </h4>
   
@@ -124,7 +125,7 @@
         <img src="precios/images/logo.png" alt="Logo de tu empresa">
 
         <!-- Texto de derechos de autor -->
-        <p>&copy; 2024 Preguntor. Todos los derechos reservados. v1.0.0.0 ⚠️⚠️PRUEBAS </p>
+        <p>&copy; ⚠️PRUEBAS | 2024 Preguntor. Todos los derechos reservados. v1.0.0.0⚠️</p>
     </div>
 </footer>
   </div>
