--- a/prueba/pruebas.html
+++ b/prueba/pruebas.html
@@ -45,7 +45,7 @@
 
    <!-- Contenido de la pagina-->
   <!-- Encabezado del cuerpo de la página -->
-  <h1>⚠️PRUEBAS⚠️ | Crea conexiones a través de preguntas</h1>
+  <h1>⚠️PRUEBAS 2⚠️ | Crea conexiones a través de preguntas</h1>
    <!-- Descripcion del juego-->
   <h4>1) Buscas a alguien → 2) Eliges el tema. → 3) Haces la pregunta. </h4>
   
