--- a/prueba/pruebas.html
+++ b/prueba/pruebas.html
@@ -15,7 +15,7 @@
   <!-- Titulo-->
   <title>preguntor</title>
   <!-- Enlace a la hoja de estilos externa -->
-  <link rel="stylesheet" type="text/css" href="preguntor_style.css">
+  <link rel="stylesheet" type="text/css" href="preguntor/preguntor.github.io/preguntor_style.css">
 
 </head>
  <!--Etiqueta del cuerpo de la pagina, todo el contenido visible -->
