--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Titulo-->
   <title>preguntor</title>
   <!-- Enlace a la hoja de estilos externa -->
-  <link rel="stylesheet" type="text/css" href="preguntor_style.css">
+  <link rel="stylesheet" type="text/css" href="diseño/preguntor_style.css">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
